# image-to-editable-ppt

./: .gitignore  README.md  README.zh-CN.md  codex_tasks.md  environment.yml  pyproject.toml  requirements.txt  skill.md
configs/: default.yaml  fonts.yaml  modes.yaml
docs/: architecture.md  failure_modes.md  failure_modes.zh-CN.md  layout_ir.md  project_plan.zh-CN.md  skill_rules.md  skill_rules.zh-CN.md
examples/ir/: business_report_v01.json
src/: __init__.py
src/ir/: __init__.py  normalize.py  schema.py  validators.py
src/pipeline/: run.py
src/renderers/: __init__.py  image_renderer.py  pptx_renderer.py  shape_renderer.py  text_renderer.py  utils.py
src/validators/: __init__.py  editable_check.py  pptx_integrity.py
tests/: test_layout_ir.py  test_validation_helpers.py
