[project]
name = "image-to-editable-ppt"
version = "0.1.0"
description = "Convert layout IR into valid, mostly editable PowerPoint decks."
requires-python = ">=3.11"
dependencies = [
  "python-pptx>=0.6.23",
  "pillow>=10.0.0",
  "pydantic>=2.6.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
